--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,69 +1,5 @@
-<div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-in">
-	<div id="dw-1" class="bmd-layout-drawer bg-faded" aria-expanded="false" aria-hidden="false">
-		<span data-tab="drawer-home" class="drawer-link" style="padding:15px;">
-		  <a href="/runs"><i style="vertical-align:bottom;" class="material-icons" role="presentation">arrow_back</i>
-		  <span>Back to All Analyses</span></a>
-		</span>
-		<header>
-  			<span style="white-space:pre-wrap;" class="navbar-brand">Analysis Results</span>
-		</header>
-		
-		<div style="padding:10px">
-			<p>Analysis ID:<br/><b><%=@run.id%></b></p>
-			<p>Status:<br/><b><%=@run.status_words%></b></p>
-			<p>Image Title:<br/><b><%=@image.title%></b></p>
-			<p>Algorithm Ran:<br/><b><%=@algorithm.name%> (ID: <%=@algorithm.id%>)</b></p>
-			<% if @run.run_at %>
-				<p>Started:<br/><b><%=Time.at(@run.run_at).in_time_zone.to_formatted_s(:db) %></b></p>
-			<% end %>
-			<%if @run.complete %>
-				<p>Completed:<br/><b><%=@run.updated_at.in_time_zone.to_formatted_s(:db) %> (Took <%=distance_of_time_in_words(Time.at(@run.run_at), @run.updated_at)%>)</b></p>
-			<% end %>
-			<p>Algorithm Parameters:</p>
-		</div>
-		<ul>
-		<% i = 0 %>
-		<% @algorithm.parameters.sort_by { |k| k["order"] }.each do |parameter|%> 
-	 		<li><%=parameter["title"]%> <b><%=@run.parameters[i]%></b></li>
-	 		<% i += 1 %>
-		<% end %>
-		</ul>
-    </div>
-
-    <div class="bmd-layout-content">
-		<div class="row">
-			<div class="col-12">
-				<div id="<%=@image.upload_file_name.parameterize%>" class="openseadragon">
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<script>
-
-	var results = '<%= raw(@results_svg.to_json) %>';
-	var annotation = '<%=raw(@annotation.data.to_json) %>';
-	var viewer = OpenSeadragon({
-	    id:            "<%=@image.upload_file_name.parameterize%>",
-	    prefixUrl:     "/openseadragon/images/",
-	    tileSources:   "/<%=Rails.application.config.data_directory%>/<%=@image.file_name_prefix%>/<%=@image.file_name_prefix%>.dzi",
-	});
-
-	var data = JSON.parse(results);
-	var annotation_data = JSON.parse(annotation)[0];
-	data.push(annotation_data);
-	viewer.initializeAnnotations();
-	waitForAnnotationInitialize();
-
-	function waitForAnnotationInitialize(){
-    if(viewer.areAnnotationsActive()){
-        viewer.annotations.set(data);
-    }
-    else{
-        setTimeout(waitForAnnotationInitialize, 250);
-    }
-}
-
-
-</script>
+<% if @run.image.threed? %>
+	<%= render partial: 'show_3d' %>
+<% else %>
+	<%= render partial: 'show_2d' %>
+<% end %>
