Firefox display issues

--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="bmd-layout-content">
-		<div class="row">
+		<div style="height:100%;" class="row">
 			<div class="<%= @image.threed? ? 'col-11' : 'col-12' %>" style="padding-right:0px;">
 				<div id="openseadragon-container" class="openseadragon">
 				</div>
