--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
-<div class="<%=params[:controller]%>_<%=params[:action]%>">
+<body style="width:100%; height:100%;">
+<div style="width:100%; height:100%;" class="<%=params[:controller]%>_<%=params[:action]%>">
   <nav id="top-nav"  class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <button style="margin-right:10px;" class="sidebar-toggler navbar-toggler" type="button" data-toggle="drawer" data-target="#viewer-sidebar" aria-expanded="false">
       <i class="material-icons">menu</i>
