--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -14,7 +14,7 @@
 	<table class="table table-hover">
 	  <thead>
 	  	<tr>
-		  	<th><%= sort_link @q, :id, "ID"%></th>
+		  	<th class="d-none d-md-table-cell"><%= sort_link @q, :id, "ID"%></th>
 		  	<th><%= sort_link @q, :title, "Image Name"%></th>
 		  	<th><%= sort_link @q, :uploaded_at, "Uploaded"%></th>
 		  	<th>Status</th>
@@ -23,7 +23,7 @@
 	  <tbody>
 	  	<% @images.each do |image| %>
 	  		<tr class="image-link" data-link="<% if !image.path.blank?%><%=image_path(image)%><% end %>">
-	  			<td><%=image.id%></td>
+	  			<td class="d-none d-md-table-cell"><%=image.id%></td>
 	  			<td><%=image.title%></td>
 	  			<td><%=image.created_at%></td>
 	  			<td><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
