--- a/app/views/images/my_images.html.erb
+++ b/app/views/images/my_images.html.erb
@@ -40,3 +40,14 @@
 		</table>
 	</div>
 </div>
+
+<script>
+$("#select_all").click( function() {
+	if($(this).is(':checked')){
+    	$(".image-check-box").attr('checked', true);
+	}
+   	else{
+   		$(".image-check-box").attr('checked', false);
+   	}
+});
+</script>
