Fix menu bar of 2d versus 3d

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -156,7 +156,7 @@
   display:none;
 }
 
-.images_show, .runs_show{
+.images_show, .runs_show_2d{
     .sidebar-toggler{
       display:block !important;
     }
