--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 </head>
 
 <body style="width:100%; height:100%;">
-<div style="width:100%; height:100%;" class="<%=params[:controller]%>_<%=params[:action]%>">
+<div style="width:100%; height:100%;" class="<%=params[:controller]%>_<%=params[:action]%><%if params[:controller]=='runs' && params[:action]=='show'%><%= @run.image.threed? ? '_3d' : '_2d'%><%end%>">
   <nav id="top-nav"  class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <button style="margin-right:5px;" class="sidebar-toggler navbar-toggler" type="button" data-toggle="drawer" data-target="#viewer-sidebar" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
