--- a/app/views/images/confirm_convert_3d.html.erb
+++ b/app/views/images/confirm_convert_3d.html.erb
@@ -25,10 +25,10 @@
 			  </thead>
 			  	<tbody>
 				  	<% @images.each do |image| %>
-				  		<tr class="image-link" data-link="<% if !image.path.blank?%><%=image_path(image)%><% end %>">
+				  		<tr class="image-link">
 				  			<td><%= check_box_tag "image_ids[]", image.id, :default=> true%></td>
 				  			<td><%=image.id%></td>
-				  			<td><%=image.title%></td>
+				  			<td><a href="<% if !image.path.blank?%><%=image_path(image)%><% end %>"><%=image.title%></a></td>
 				  			<td><%=image.created_at%></td>
 				  			<td><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
 				  		</tr>
