--- a/app/views/runs/_show_3d.html.erb
+++ b/app/views/runs/_show_3d.html.erb
@@ -40,7 +40,7 @@
 	  	  	<%= submit_tag "Convert to 3D Volume", :style=> 'float:right', :class=> 'btn btn-success btn-raised'%>
 	  	  	<tbody>
 				  		<% @slices.each do |image| %>
-					  		<tr class="image-link" data-link="<% if !image.path.blank?%><%=image_path(image)%><% end %>">
+					  		<tr class="image-link">
 					  			<td><%= check_box_tag "image_ids[]", image.id, false, class: 'image-check-box' %></td>
 					  			<td><%=image.id%></td>
 					  			<td><%=image.title%></td>
@@ -56,9 +56,9 @@
   	  	<button style="float:right" class="btn btn-success btn-raised">View 3D Volume</button></a>
 				<tbody>
 			  		<% @slices.each do |image| %>
-				  		<tr class="image-link" data-link="<% if !image.path.blank?%><%=image_path(image)%><% end %>">
+				  		<tr class="image-link">
 				  			<td><%=image.id%></td>
-				  			<td><%=image.title%></td>
+				  			<td><a href="<% if !image.path.blank?%><%=image_path(image)%><% end %>"><%=image.title%></a></td>
 				  			<td><%=image.created_at%></td>
 				  			<td><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
 				  			<td><% if image.hidden? %>Private<%else%>Public<%end%></td>
