--- a/app/views/runs/_annotation_form.html.erb
+++ b/app/views/runs/_annotation_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(@run) do |f| %>
-	<%= f.label :annotation_id, 'Select Annotation ROI' %>
+	<%= f.label :annotation_id, 'Select Annotation ROI', {class: 'bmd-label-static'} %>
 	<%= f.collection_select :annotation_id, @image.annotations, :id, :label, {}, { class: 'form-control' } %>
 <% end %>
