--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -56,8 +56,13 @@
 	_.each(results_data, function(element, index){
 		element[0][1]["index"] = index;
 		element[0][1]["data-id"] = element[1];
+		element[0][1]["fill"] = "lime"
+		element[0][1]["fill-opacity"] = 0.1;
+		element[0][1]["stroke"] = "lime";
+		element[0][1]["stroke-width"] = 1.5;
 		if(element[2] === true){
-			element[0][1]["style"] = "opacity:0.5";
+			element[0][1]["fill"] = "red";
+			element[0][1]["stroke"] = "red";
 			element[0][1]["exclude"] = true;
 		}
 		results_svg.push(element[0]);
@@ -96,10 +101,12 @@
 			})
 	  		.done(function() {
 	  			if(action == 'exclude'){
-    				current_annotations[index][1]["style"] = "opacity:0.5";
+    				current_annotations[index][1]["fill"] = "red";
+    				current_annotations[index][1]["stroke"] = "red";
     				current_annotations[index][1]["exclude"] = true;
     			}else{
-    				current_annotations[index][1]["style"] = "";
+    				current_annotations[index][1]["fill"] = "lime";
+    				current_annotations[index][1]["stroke"] = "lime";
     				current_annotations[index][1]["exclude"] = false;
 
     			}
