--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<script src='spectrum.js'></script>
+<link rel='stylesheet' href='spectrum.css' />
+
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <%= csrf_meta_tags %>
 </head>
