--- a/app/views/images/_drawer_data.html.erb
+++ b/app/views/images/_drawer_data.html.erb
@@ -8,8 +8,8 @@
 </header>
 <ul class="list-group">
 	<% if current_user %>
-		<div style="float:right;" class="btn-group">
-		   	<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New Data</button>
+		<div style="padding-left:10px; float:right;" class="btn-group">
+		   	<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New Data</button>
 		   	<div class="dropdown-menu">
 		   		<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="patient-id" data-label="Patient ID">Patient ID</a>
 				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#general-modal" data-key="age" data-label="Age (years)">Age</a>
