--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -30,7 +30,7 @@
 		console.log("Before Send");
 		formData.append("test_field", "test_value");
 		var file_name_lower = file.name.toLowerCase();
-		   if (file_name_lower.indexOf(".svs") < 0 && file_name_lower.indexOf(".ndpi") < 0 && file_name_lower.indexOf(".jpg") < 0 && file_name_lower.indexOf(".jpeg") < 0 && file_name_lower.indexOf(".tif") < 0) {
+		   if (file_name_lower.indexOf(".svs") < 0 && file_name_lower.indexOf(".ndpi") < 0 && file_name_lower.indexOf(".jpg") < 0 && file_name_lower.indexOf(".jpeg") < 0 && file_name_lower.indexOf(".tif") < 0 && file_name_lower.indexOf(".png") < 0) {
        		alert("Your file type is not supported. Please upload an SVS or NDPI file ");
        		 return false;
     	}
