--- a/app/views/runs/_show_2d.html.erb
+++ b/app/views/runs/_show_2d.html.erb
@@ -54,16 +54,18 @@
 	var exclude_indices = [];
 
 	_.each(results_data, function(element, index){
-		element[0][1]["index"] = index;
-		element[0][1]["data-id"] = element[1];
-		element[0][1]["fill"] = "lime"
-		element[0][1]["fill-opacity"] = 0.1;
-		element[0][1]["stroke"] = "lime";
-		element[0][1]["stroke-width"] = 1.5;
-		if(element[2] === true){
-			element[0][1]["fill"] = "red";
-			element[0][1]["stroke"] = "red";
-			element[0][1]["exclude"] = true;
+		if(element[0][0] == "circle"){
+			element[0][1]["index"] = index;
+			element[0][1]["data-id"] = element[1];
+			element[0][1]["fill"] = "lime"
+			element[0][1]["fill-opacity"] = 0.1;
+			element[0][1]["stroke"] = "lime";
+			element[0][1]["stroke-width"] = 1.5;
+			if(element[2] === true){
+				element[0][1]["fill"] = "red";
+				element[0][1]["stroke"] = "red";
+				element[0][1]["exclude"] = true;
+			}
 		}
 		results_svg.push(element[0]);
 	});
