--- a/app/views/images/_drawer_annotations.html.erb
+++ b/app/views/images/_drawer_annotations.html.erb
@@ -36,7 +36,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @image.annotations.order('id desc').each do |annotation| %>
+      <% @image.annotations.where(:user_id=>current_user.id).order('id desc').each do |annotation| %>
         <%= render partial: "annotation_row", locals: {annotation: annotation} %>
       <% end %>
     </tbody>
