--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,16 +1,23 @@
 <%= form_for(@run) do |f| %>
-	<%= f.hidden_field :image_id, :value=> @image.id %>
 	<div class="form-group">
 		<%= f.label :algorithm_id, "Select an algorithm to run" %>
-		<%= f.collection_select :algorithm_id, @algorithm, :id, :title, {include_blank: 'Please select'}, { class: 'form-control' } %>
+		<%= f.collection_select :algorithm_id, @algorithm, :id, :title_with_type, {include_blank: 'Please select'}, { class: 'form-control' } %>
 	</div>
+	<% if @image.threed? %>
+		<div class="form-group twod-algorithm-slice-select" style="display:none;">
+			<%= f.label :image_id, "Select a image slice for analysis (applicable for 2D algorithms)" %>
+			<%= f.collection_select :image_id, @slices, :id, :slice_order, {}, { class: 'form-control' } %>
+		</div>
+	<% else %>
+		<%= f.hidden_field :image_id, :value=> @image.id %>
+	<% end %>
 
 	<div id="annotation-select" class="form-group">
 	</div>
 
 	<div class="form-group">
 		<%= f.label :tile_size, "Tile Size (in pixels)" %>
-		<%= f.number_field :tile_size, {max: 1000, value:500} %>
+		<%= f.number_field :tile_size, {max: 1000, value: @slice.default_tile_size} %>
 	</div>
 	<br/><br/>
 	<h5>Algorithm Parameters</h5>
@@ -35,4 +42,12 @@
 			$('#annotation-select').html(partial);
 		})
 	});
+
+	$('#run_algorithm_id').change(function(){
+		if($(this).find(":selected").text().includes('3D Algorithm')){
+			$('.twod-algorithm-slice-select').css('display', 'none');
+		}else{
+			$('.twod-algorithm-slice-select').css('display', 'block');
+		}
+	})
 </script>
