--- a/app/views/images/my_images.html.erb
+++ b/app/views/images/my_images.html.erb
@@ -22,6 +22,7 @@
 		  	</tr>
 		  </thead>
 		  <%= form_tag confirm_3d_images_path do %>
+		  	<%= submit_tag "Make Public", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> make_public_images_path %>
 		  	<%= submit_tag "Delete", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-danger", :formaction=> confirm_delete_images_path %>
 		  	<%= submit_tag "Share", :style=>"float:right; margin-left:10px;", :class=>"btn-raised btn btn-primary", :formaction=> confirm_share_images_path %>
 		  	<%= submit_tag "Combine in 3D Volume", :style=> 'float:right', :class=> 'btn btn-success btn-raised'%>
