--- a/app/views/images/my_images.html.erb
+++ b/app/views/images/my_images.html.erb
@@ -32,14 +32,14 @@
 			  			<td><%= check_box_tag "image_ids[]", image.id, false, class: 'image-check-box'%></td>
 			  			<td class="d-none d-md-table-cell"><%=image.id%></td>
 			  			<td>
-			  				<% if !image.path.blank?%>
+			  				<% if image.complete %>
 			  					<a href="<%=image_path(image)%>"><%=image.title%></a>
 			  				<% else%>
 			  					<%=image.title%>
 			  				<% end %>
 			  			</td>
 			  			<td><%=image.created_at%></td>
-			  			<td class="d-none d-md-table-cell"><% if image.processing %>Processing<% elsif !image.path.blank?%>Available<%else%>Awaiting Processing<% end%></td>
+			  			<td class="d-none d-md-table-cell"><% if image.processing %>Processing<% elsif image.complete %>Available<%else%>Awaiting Processing<% end%></td>
 			  			<td><% if image.hidden? %>Private<%else%>Public<%end%></td>
 			  		</tr>
 			  	<% end %>
